--- a/Utama.html
+++ b/Utama.html
@@ -74,7 +74,7 @@
     <div class="letter">
         <h3>hii ca!</h3>
         <p>
-          good luck upraknya, I hope we all pass!! don't forget to pray.
+          good luck on ur exam, I hope we all pass!! don't forget to pray.
             do ur best,no matter the result u are learning and improving.
         </p>
     </div>
