--- a/Utama.html
+++ b/Utama.html
@@ -67,6 +67,8 @@
         Your browser isn't invited for super fun audio time.
     </audio>
 
+        <p>click to open</p>
+
 <div class="container" onclick="this.classList.add('clicked')">
     <img id="closedEnvelope" src="envelope-closed.jpg" alt="Amplop Tertutup">
     <img id="openEnvelope" src="envelope-open.jpg" alt="Amplop Terbuka">
