--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="image-box">
             <img src="ihsmt.jpg" alt="">
         </div>
-        <a href="Utama.html" class="next-button">what</a>
+        <a href="utama.html" class="next-button">what</a>
     </div>
 </body>
 </html>
