--- a/utama.html
+++ b/utama.html
@@ -30,9 +30,7 @@
           <div class="envelope__card">
             <p class="enveloper__card-text">
               hii it's last day!<br/>
-              good luck ca,<br/>
-              i hope we all pass<br/>
-              do your best.<br/>
+              good luck ca, i hope we all pass<br/> do your best.<br/>
             </p>
           </div>
 
