--- a/utama.html
+++ b/utama.html
@@ -29,7 +29,7 @@
 
           <div class="envelope__card">
             <p class="enveloper__card-text">
-              hii it's last day! good luck ca, i hope we all pass.<br/>
+              hii it's last day! good luck ca, do your best.<br/>
             </p>
           </div>
 
