--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </audio>
     <div class="container">
         <div class="image-box">
-            <img src="ihsmt.jpg" alt="">
+            <img src="hii.jpg" alt="">
         </div>
         <a href="utama.html" class="next-button">what</a>
     </div>
